[package]
name = "json-serialize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2.1"
num-bigint = { version = "0.2", features = ["serde"] }
num = "0.2"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

